[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "gguf>=0.19.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "openai>=1.0.0",
    "pillow>=12.3.0",
    "pytest>=8.0.0",
    "transformers>=5.12.1",
    "zensical>=0.0.46",
]
